# practice

./: .gitignore  pyproject.toml
VI/: test.py
algorithms/: main.py
algorithms/src/algorithms1/: binary_search.py  dataStructures.py  linked_list.py  linked_list_2.py  sumBases.py  two_sum_array.py
algorithms/src/algorithms1/binaryTrees/: binarytree101.py  breadth first traversal.py  dimater of tree.py  flatten binary tree to link list.py  inorder_traversal_iterative.py  max_depth_iterative.py  maximum path sum.py  number of uni subtrees.py  postorder_traversal_iterative.py  preorder_traversal_iterative.py  to doubly linked list.py  vertical order.py
algorithms/src/algorithms1/divide_and_conquer/: kcloses2origin.py
algorithms/src/algorithms1/graphs/: breath_first_traveral.py  create_graph.py  depth_first_traversal.py  dijsktra algorithm.py  dijsktra_algorithm_adjacency matrix.py
algorithms/src/algorithms1/heaps/: heap_class.py
algorithms/src/algorithms1/link_list/: deep copy of list - iterative.py  deep copy of list - recrusive.py  linked_list.py  reorder list.py  reverse operations.py
algorithms/src/algorithms1/parenthesis/: balanced_par.py
algorithms/src/algorithms1/practice/: dataStructures.py  find_max.py  (+8 more)
algorithms/src/asyncio/: sample_http_get.py
algorithms/src/backtracking101/: all_combinations.py  all_permutations.py
algorithms/src/fb/: anagrams.py  int2english.py  minimum sub window string.py  myatoi.py  two_sum.py
algorithms/src/micro2020feb/: data_viz.py
algorithms/src/practiceOnMyOwn/: test1.py
algorithms/src/susi/: learning.py
(+14 files in other folders)
