[tool.poetry]
name = "practice"
version = "0.1.0"
description = "Practice Code"
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.6.2"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
